Return true from NavigationContext::HasCommitted for same-document navigations.

NavigationHandle::HasCommitted returns true, and NavigationContext should
match API contract of NavigationHandle.

Bug: 921097
Change-Id: I6c47e196117735c77c7132254db4815ff4c6dc97
Reviewed-on: https://chromium-review.googlesource.com/c/1410179
Reviewed-by: Kurt Horimoto <kkhorimoto@chromium.org>
Commit-Queue: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#623361}